<resources>
    <string name="app_name">login</string>
    <string name="forgot_your_password"><u>Forgot your password</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="alt">alt</string>
    <string name="gym_bro_s">Gym bro\'s</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="register">Register</string>
</resources>